# evalscope

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: build-sprint.md  venture-brief.md
.github/workflows/: ci.yml
evalscope/: __init__.py  __main__.py  checks.py  cli.py  diffing.py  openai_adapter.py  runner.py  specs.py  storage.py
evalscope.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: quickstart.json  support_triage.yaml
tests/: test_checks.py  test_runner.py
